--- a/src/app/components/screens/admin/course/course-manage/course-manage.component.html
+++ b/src/app/components/screens/admin/course/course-manage/course-manage.component.html
@@ -36,15 +36,15 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let video of videos; let i = index">
+        <tr *ngFor="let video of videos; let i = index" class='w-[100%]'>
           <td>{{ i + 1 }}</td>
           <td>{{ video.title }}</td>
           <td>
             <a [href]="video.url" target="_blank" class="video-url">{{ video.url }}</a>
           </td>
           <td>{{ video.isPreview ? 'Có' : 'Không' }}</td>
-          <td>
-            <button (click)="openVideoModal(video.url)">Xem Video</button>
+          <td class="flex flex-row gap-2">
+            <button (click)="openVideoModal(video.url)">Xem </button>
             <button (click)="editVideo(i)" class="btn btn-warning">Sửa</button>
             <button (click)="deleteVideo(i)" class="btn btn-danger">Xóa</button>
           </td>
